# ZedBot

./: .gitignore  README.md  main.py  pyproject.toml
zed_bot/: bot.py  enums.py  logger.py  terminal.py
